--- a/OnlineContacts.WEB/OnlineContacts.csproj
+++ b/OnlineContacts.WEB/OnlineContacts.csproj
@@ -488,6 +488,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Logs\LogerFile.txt" />
+    <Content Include="RefrencesThatWillNotDownlodedAoutmaticlly\Kendo.Mvc.dll" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="NLog.config">
